fix spacing

--- a/style.css
+++ b/style.css
@@ -1,19 +1,25 @@
 html, body {
-    height: 100%;
-  }
+  margin: 0;
+  padding: 0;
   
-    body {
-    margin: 0;
-    display: flex;
-    background-color: black;
-    color:white;
-  
-    /* This centers our sketch horizontally. */
-    justify-content: center;
-  
-    /* This centers our sketch vertically. */
-    align-items: center;
+}
 
-    /* overflow-y: hidden; Hide vertical scrollbar */
-   /* overflow-x: hidden;  Hide horizontal scrollbar */
-  }
+body {
+  margin: 0;
+
+  background-color: white ;
+  font-size: x-large;
+  font-family: 'Courier New', Courier, monospace;
+
+   /*This centers our sketch horizontally. */
+  justify-content: center;
+  text-align: center
+  
+  
+
+}
+
+canvas{
+  padding-top: 3%;
+}
+ 
